Fully optimized data load using `numpy`

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -10,14 +10,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "from os import getcwd\n",
-    "from numpy import exp\n",
+    "from numpy import exp, array, append, vectorize, mean, transpose\n",
+    "from numpy import float32\n",
     "from scipy.optimize import minimize\n",
-    "from ticktack import ode"
+    "from scipy.integrate import odeint\n",
+    "from plotnine import ggplot, aes, geom_point\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "YEAR = 0\n",
+    "DC14 = 1\n",
+    "SIG_DC14 = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\") as data:\n",
+    "    _ = next(data)\n",
+    "    data = array([row.strip().split(\",\") for row in data], dtype=float32)\n",
+    "    data = transpose(data)"
    ]
   },
   {
@@ -29,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dydx(t, *args):\n",
+    "def production(t, *args):\n",
     "    peak, span, height = args  # Loading parameters\n",
     "    return height * exp(-((t - peak) / (span / 2)) ** 8)   # Gaussian pulse"
    ]
@@ -43,9 +68,92 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def loss(params=()):\n",
-    "    "
+    "    ode.odeint(dydx, mean(data[\"dc14\"][:4]), data[\"year\"], *params,)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076],\n",
+       "       [-17.45000076]])"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odeint(dydx, mean(data[DC14][:4]), data[YEAR], args=(775, 1))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pandas.read_csv`: 1.02 ms ± 65.6 µs\n",
+    "\n",
+    "`list` with `append`: 57.5 µs ± 3.6 µs\n",
+    "\n",
+    "`ndarray` with `append`: 668 µs ± 60.6 µs \n",
+    "\n",
+    "`ndarray` with `map`, `numpy.append`: 38.2 µs ± 4.07 µs\n",
+    "\n",
+    "`ndarray` with `map`, `add_row`: 17.7 µs ± 1.34 µs \n",
+    "\n",
+    "`list` with `numpy.array` conversion at the end: 53.7 µs ± 3.14 µs"
    ]
   }
  ],
