Working `odeint` attempt

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "with open(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\") as data:\n",
-    "    _ = next(data)\n",
+    "    _ = next(data)  # Removing the header\n",
     "    data = array([row.strip().split(\",\") for row in data], dtype=float32)\n",
     "    data = transpose(data)"
    ]
@@ -54,21 +54,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def production(t, *args):\n",
-    "    peak, span, height = args  # Loading parameters\n",
-    "    return height * exp(-((t - peak) / (span / 2)) ** 8)   # Gaussian pulse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dydx(y, t, *params):\n",
+    "    def production(t, *params):\n",
+    "        peak, span, height = params  # Loading parameters\n",
+    "        return height * exp(-((t - peak) / (span / 2)) ** 8)   # Gaussian pulse\n",
+    "    return y + production(t, *params)"
+   ]
   },
   {
    "cell_type": "code",
@@ -83,60 +85,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076],\n",
-       "       [-17.45000076]])"
+       "array([[-1.74500008e+01],\n",
+       "       [-1.28939040e+02],\n",
+       "       [-7.03983350e+03],\n",
+       "       [-5.20177264e+04],\n",
+       "       [-3.84361913e+05],\n",
+       "       [-2.84007183e+06],\n",
+       "       [-2.09854508e+07],\n",
+       "       [-1.55062679e+08],\n",
+       "       [-1.14576687e+09],\n",
+       "       [-8.46613601e+09],\n",
+       "       [-6.25567561e+10],\n",
+       "       [-4.62235396e+11],\n",
+       "       [-1.25648610e+12],\n",
+       "       [-3.41548339e+12],\n",
+       "       [-9.28424661e+12],\n",
+       "       [-2.52371993e+13],\n",
+       "       [-6.86018214e+13],\n",
+       "       [-1.86479088e+14],\n",
+       "       [-1.37790449e+15],\n",
+       "       [-1.01814139e+16],\n",
+       "       [-7.52310414e+16],\n",
+       "       [-5.55886405e+17],\n",
+       "       [-4.10747597e+18],\n",
+       "       [-3.03503715e+19],\n",
+       "       [-2.24260605e+20],\n",
+       "       [-1.65707425e+21],\n",
+       "       [-1.22442150e+22],\n",
+       "       [-9.04731949e+22],\n",
+       "       [-6.68511536e+23],\n",
+       "       [-4.93966942e+24],\n",
+       "       [-3.64994957e+25],\n",
+       "       [-2.69696831e+26],\n",
+       "       [-1.99280508e+27],\n",
+       "       [-1.47249491e+28],\n",
+       "       [-1.08803479e+29],\n",
+       "       [-8.03955035e+29],\n",
+       "       [-5.94046906e+30],\n",
+       "       [-4.38944607e+31]])"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "odeint(dydx, mean(data[DC14][:4]), data[YEAR], args=(775, 1))\n",
-    "\n"
+    "odeint(func=dydx, y0=mean(data[DC14][:4]), t=data[YEAR], args=(775, 1, 5))"
    ]
   },
   {
