--- a/Python ODE/linear_solver.ipynb
+++ b/Python ODE/linear_solver.ipynb
@@ -41,36 +41,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.00012096809433855938,\n",
-       " 0.00012096809433855938,\n",
-       " 0.00012096809433855938,\n",
-       " 0.00012096809433855938,\n",
-       " 0.00012096809433855938,\n",
-       " 0.00012096809433855938,\n",
-       " 0.00012096809433855938,\n",
-       " 0.00012096809433855938,\n",
-       " 0.00012096809433855938,\n",
-       " 0.00012096809433855938,\n",
-       " 0.00012096809433855938]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[log(2) / 5730 for _ in model[\"production coefficients\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [
@@ -89,72 +59,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import repeat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.49 µs ± 178 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "5.81 µs ± 291 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "decay_matrix = diag(repeat(log(2) / 5730, len(model[\"fluxes\"])))"
+    "decay_matrix = diag(list(repeat(log(2) / 5730, len(model[\"fluxes\"]))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.00012097, 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.00012097, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.00012097, 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.00012097, 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.00012097,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.00012097, 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.00012097, 0.        , 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.00012097, 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.00012097, 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.00012097,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.00012097]])"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.84 µs ± 184 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
     }
    ],
    "source": [
-    "decay_matrix"
+    "%%timeit\n",
+    "decay_matrix = diag([log(2) / 5730] * len(model[\"fluxes\"]))"
    ]
   },
   {
