--- a/Python ODE/linear_solver.ipynb
+++ b/Python ODE/linear_solver.ipynb
@@ -9,31 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "from h5py import File\n",
     "from os import getcwd\n",
     "\n",
-    "from numpy import array, diag   # Array manipulation \n",
-    "from numpy import log   # Mathematical operations\n",
+    "from numpy import array, diag, transpose   # Array manipulation \n",
+    "from numpy import log, sum, exp   # Mathematical operations\n",
     "from numpy import float32 # Types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.74 ms ± 484 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = File(f\"{getcwd()}/models/Guttler14.hd5\")\n",
     "model = {key: array([*value]) for key, value in model.items()}"
@@ -41,117 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26.3 µs ± 2.21 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "decay_matrix = diag([log(2) / 5730 for _ in model[\"fluxes\"]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import repeat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.81 µs ± 291 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "decay_matrix = diag(list(repeat(log(2) / 5730, len(model[\"fluxes\"]))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.84 µs ± 184 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "decay_matrix = diag([log(2) / 5730] * len(model[\"fluxes\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'fluxes': array([[  0. ,  45. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
-       "           0. ,   0. ],\n",
-       "        [ 45. ,   0. ,  60.5,   0. ,   0. , 115. ,   0. ,   0. ,   0. ,\n",
-       "           0. ,   0. ],\n",
-       "        [  0. ,  61. ,   0. ,  40. ,  38.2,   0. ,   0. ,   0. ,   0. ,\n",
-       "           0. ,   0.3],\n",
-       "        [  0. ,   0. ,  36. ,   0. ,   4. ,   0. ,   0. ,   0. ,   0. ,\n",
-       "           0. ,   0. ],\n",
-       "        [  0. ,   0. ,  42. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
-       "           0. ,   0.2],\n",
-       "        [  0. ,  60. ,   0. ,   0. ,   0. ,   0. ,  15. ,  40. ,   0. ,\n",
-       "           0. ,   0. ],\n",
-       "        [  0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,  15. ,   0. ,\n",
-       "           0. ,   0. ],\n",
-       "        [  0. ,  50. ,   1. ,   0. ,   0. ,   0. ,   0. ,   0. ,   3. ,\n",
-       "           1. ,   0. ],\n",
-       "        [  0. ,   3. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
-       "           0. ,   0. ],\n",
-       "        [  0. ,   0.8,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
-       "           0. ,   0.2],\n",
-       "        [  0. ,   0.7,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
-       "           0. ,   0. ]]),\n",
-       " 'hemispheres': array([b'None', b'None', b'None', b'None', b'None', b'None', b'None',\n",
-       "        b'None', b'None', b'None', b'None'], dtype='|S4'),\n",
-       " 'nodes': array([b'Stratosphere', b'Troposphere', b'Surface Water',\n",
-       "        b'Surface Biota', b'Intermediate & Deep water',\n",
-       "        b'Short-lived biota', b'Long-lived Biota', b'Litter', b'Soil',\n",
-       "        b'Peat', b'Sedimentary Sink'], dtype='|S25'),\n",
-       " 'production coefficients': array([0.7, 0.3, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. ]),\n",
-       " 'reservoir content': array([[8.850e+01, 5.015e+02, 9.000e+02, 3.000e+00, 3.780e+04, 1.100e+02,\n",
-       "         4.500e+02, 3.000e+02, 1.350e+03, 5.000e+02, 3.780e+05]])}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "self._decay_matrix = jnp.diag(jnp.array([self._decay_constant] * self._n_nodes))\n",
-    "c_14_fluxes = self._corrected_fluxes / jnp.transpose(self._reservoir_content)\n",
-    "new_c_14_fluxes = jnp.diag(jnp.sum(c_14_fluxes, axis=1))"
+    "decay = diag([log(2) / 5730] * len(model[\"fluxes\"]))\n",
+    "fluxes = model[\"fluxes\"] / transpose(model[\"reservoir content\"])\n",
+    "balance = diag(sum(fluxes, axis=1))\n",
+    "transfer = transpose(fluxes) - balance - decay\n",
+    "projection = model[\"production coefficients\"]"
    ]
   },
   {
@@ -160,6 +50,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def production(t, *args):\n",
+    "    start, duration, phase, area = args\n",
+    "\n",
+    "    middle = start + duration / 2.\n",
+    "    height = area / duration\n",
+    "    gaussian = height * exp(- ((t - middle) / (duration / 2)) ** 16.)\n",
+    "    \n",
+    "    production = steady_state_production + 0.18 * steady_state_production * sin(\n",
+    "        2 * pi / 11 * t + phase) + height\n",
+    "    return production"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dydx(y, t, *args):\n",
+    "    return transfer @ y + production(t, *args) * projection"
+   ]
   }
  ],
  "metadata": {
