Reverting to the use of `ticktack`

--- a/Python ODE/linear_solver.ipynb
+++ b/Python ODE/linear_solver.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "from h5py import File\n",
+    "import hdfdict\n",
     "from os import getcwd\n",
     "\n",
     "from numpy import array, diag, transpose   # Array manipulation \n",
@@ -23,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = File(f\"{getcwd()}/models/Guttler14.hd5\")\n",
+    "model = File(f\"{getcwd()}/models/Guttler14.hd5\", \"r\")\n",
     "model = {key: array([*value]) for key, value in model.items()}"
    ]
   },
