Backflipping and returning to separate investigation

--- a/Python ODE/linear_solver.ipynb
+++ b/Python ODE/linear_solver.ipynb
@@ -14,7 +14,6 @@
    "outputs": [],
    "source": [
     "from h5py import File\n",
-    "import hdfdict\n",
     "from os import getcwd\n",
     "\n",
     "from numpy import array, diag, transpose   # Array manipulation \n",
@@ -24,17 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = File(f\"{getcwd()}/models/Guttler14.hd5\", \"r\")\n",
+    "model = File(f\"{getcwd()}/models/Guttler14.hd5\")\n",
     "model = {key: array([*value]) for key, value in model.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +43,6 @@
     "transfer = transpose(fluxes) - balance - decay\n",
     "projection = model[\"production coefficients\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -72,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
