--- a/Python ODE/linear_solver.ipynb
+++ b/Python ODE/linear_solver.ipynb
@@ -9,21 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "from h5py import File\n",
     "from os import getcwd\n",
     "\n",
-    "from numpy import array, diag, transpose   # Array manipulation \n",
-    "from numpy import log, sum, exp   # Mathematical operations\n",
+    "from numpy import array, diag, transpose, zeros, arange   # Array manipulation \n",
+    "from numpy import log, sum, exp, sin, pi   # Mathematical operations\n",
     "from numpy import float32 # Types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "decay = diag([log(2) / 5730] * len(model[\"fluxes\"]))\n",
-    "fluxes = model[\"fluxes\"] / transpose(model[\"reservoir content\"])\n",
+    "yinitial = model[\"reservoir content\"]\n",
+    "fluxes = model[\"fluxes\"] / transpose(yinitial)\n",
     "balance = diag(sum(fluxes, axis=1))\n",
     "transfer = transpose(fluxes) - balance - decay\n",
     "projection = model[\"production coefficients\"]"
@@ -46,20 +47,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def production(t, *args):\n",
+    "def production(t, *args, steady_state=1.86):\n",
     "    start, duration, phase, area = args\n",
     "\n",
     "    middle = start + duration / 2.\n",
     "    height = area / duration\n",
     "    gaussian = height * exp(- ((t - middle) / (duration / 2)) ** 16.)\n",
-    "    \n",
-    "    production = steady_state_production + 0.18 * steady_state_production * sin(\n",
-    "        2 * pi / 11 * t + phase) + height\n",
-    "    return production"
+    "    sinusoid = 0.18 * steady_state * sin(2 * pi / 11 * t + phase)\n",
+    "    return gaussian + sinusoid + steady_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dydx(y, t, *args):\n",
+    "    return transfer @ y + production(t, *args) * projection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def odeint_linear(y0, derivative, timesteps, parameters=()):\n",
+    "    output = zeros((y0.shape[1], timesteps.shape[0]))\n",
+    "    output[:, 0] = y0\n",
+    "    for j, step in enumerate(timesteps[:-1]):\n",
+    "        output[:, j+1] = output[j] + derivative(output[:, j], step, *parameters)\n",
+    "    return output "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "odeint_linear(yinitial, dydx, arange(-225, 775, 0.1), parameters=(774.86, 0.25, 0.8, 6.44))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11, 1)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yinitial.shape"
    ]
   },
   {
@@ -67,10 +119,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def dydx(y, t, *args):\n",
-    "    return transfer @ y + production(t, *args) * projection"
-   ]
+   "source": []
   }
  ],
  "metadata": {
