--- a/Python ODE/linear_solver.ipynb
+++ b/Python ODE/linear_solver.ipynb
@@ -9,32 +9,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from h5py import File\n",
     "from os import getcwd\n",
     "\n",
-    "from numpy import array, diag, transpose, zeros, arange   # Array manipulation \n",
-    "from numpy import log, sum, exp, sin, pi   # Mathematical operations\n",
+    "from numpy import array, diag, transpose, zeros, arange, vstack   # Array manipulation \n",
+    "from numpy import log, sum, exp, sin, pi, mod, floor   # Mathematical operations\n",
     "from numpy import float32 # Types\n",
+    "from numpy import vectorize\n",
     "\n",
-    "from matplotlib.pyplot import plot"
+    "from numpy.linalg import solve  # For the equilibriation\n",
+    "\n",
+    "from matplotlib.pyplot import plot\n",
+    "\n",
+    "from functools import partial\n",
+    "from itertools import compress, groupby"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "UNIT_FACTOR = 14.003242 / 6.022 * 5.11 * 31536. / 1.e5"
+    "UNIT_FACTOR = 14.003242 / 6.022 * 5.11 * 31536. / 1.e5\n",
+    "PRODUCTION_RATE = 1.76"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,25 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "decay = diag([log(2) / 5730] * len(model[\"fluxes\"]))\n",
-    "yinitial = model[\"reservoir content\"]\n",
-    "fluxes = model[\"fluxes\"] / transpose(yinitial)\n",
+    "fluxes = model[\"fluxes\"] / transpose(model[\"reservoir content\"])\n",
     "balance = diag(sum(fluxes, axis=1))\n",
     "transfer = transpose(fluxes) - balance - decay\n",
-    "projection = model[\"production coefficients\"]"
+    "projection = model[\"production coefficients\"]\n",
+    "steady_state = solve(transfer, - projection * PRODUCTION_RATE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def production(t, *args, steady_state=1.86):\n",
+    "def production(t, *args, steady_state=PRODUCTION_RATE):\n",
     "    start, duration, phase, area = args\n",
     "\n",
     "    middle = start + duration / 2.\n",
@@ -76,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def odeint_linear(y0, derivative, timesteps, parameters=()):\n",
     "    step_size = timesteps[1] - timesteps[0]\n",
-    "    output = zeros((y0.shape[1], timesteps.shape[0]))\n",
+    "    output = zeros((y0.shape[0], timesteps.shape[0]))\n",
     "    output[:, 0] = y0\n",
     "    for j, step in enumerate(timesteps[:-1]):\n",
     "        output[:, j+1] = output[:, j] + step_size * \\\n",
@@ -102,7 +109,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "growth_season = [False, False, False, True, True, True, True, True, True, False, False, False]\n",
+    "time_out = 754.4567"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bin_data(carbon_14, time_out, growth_season):\n",
+    "    \n",
+    "    carbon_14 = groupby(zip(floor(time_out), transpose(vstack(test, time_out))), lambda x: x[0])\n",
+    "    \n",
+    "    @partial(growth_season=growth_season)\n",
+    "    def in_growth_season(time, growth_season):\n",
+    "        month = int(floor((time - floor(time)) * 12))\n",
+    "        return growth_season[month]\n",
+    "\n",
+    "    mask = map(in_growth_season, time_out)\n",
+    "    compress(carbon_14, mask)\n",
+    "    return mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (3726415623.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_26922/3726415623.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    binned_data - self.steady_state_y0[self.box_idx]) / self.steady_state_y0[self.box_idx] * 1000\u001b[0m\n\u001b[0m                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_dc14(carbon_14):\n",
+    "    binned_data - self.steady_state_y0[self.box_idx]) / self.steady_state_y0[self.box_idx] * 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,16 +167,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.36995259e+01, 1.77279455e+02, 2.97732699e+02, 9.92433326e-01,\n",
+       "       1.12822689e+04, 3.88803269e+01, 1.58480749e+02, 1.05862835e+02,\n",
+       "       4.51789314e+02, 1.66375023e+02, 1.83592970e+03])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test = odeint_linear(yinitial, dydx, time_out, parameters=(774.86, 0.25, 0.8, 6.44))"
+    "steady_state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_26922/4003358856.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0modeint_linear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msteady_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdydx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime_out\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m774.86\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.25\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6.44\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_26922/807052506.py\u001b[0m in \u001b[0;36modeint_linear\u001b[0;34m(y0, derivative, timesteps, parameters)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0modeint_linear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mderivative\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimesteps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mstep_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtimesteps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtimesteps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimesteps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstep\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimesteps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "test = odeint_linear(steady_state, dydx, time_out, parameters=(774.86, 0.25, 0.8, 6.44))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,36 +253,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'SingleFitter' object has no attribute 'burn_in_time'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_15976/2309511445.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mfitting_object\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSingleFitter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcarbon_box_model\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfitting_object\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprepare_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"simple_sinusoid\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mfitting_object\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdc14_fine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m774.86\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.25\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6.44\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "    \u001b[0;31m[... skipping hidden 13 frame]\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/ticktack/lib/python3.8/site-packages/ticktack-0.1.3.2-py3.8.egg/ticktack/fitting.py\u001b[0m in \u001b[0;36mdc14_fine\u001b[0;34m(self, params)\u001b[0m\n\u001b[1;32m    554\u001b[0m             \u001b[0mPredicted\u001b[0m \u001b[0md14c\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    555\u001b[0m         \"\"\"\n\u001b[0;32m--> 556\u001b[0;31m         \u001b[0mburnin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_burnin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msteady_state_y0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    557\u001b[0m         \u001b[0mevent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_event\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mburnin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    558\u001b[0m         \u001b[0md14c\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msteady_state_y0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msteady_state_y0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "    \u001b[0;31m[... skipping hidden 8 frame]\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/ticktack/lib/python3.8/site-packages/ticktack-0.1.3.2-py3.8.egg/ticktack/fitting.py\u001b[0m in \u001b[0;36mrun_burnin\u001b[0;34m(self, y0, params)\u001b[0m\n\u001b[1;32m    498\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mthe\u001b[0m \u001b[0msystem\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    499\u001b[0m         \"\"\"\n\u001b[0;32m--> 500\u001b[0;31m         \u001b[0mbox_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcbm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mburn_in_time\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moversample\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproduction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    501\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mbox_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    502\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SingleFitter' object has no attribute 'burn_in_time'"
-     ]
+     "data": {
+      "text/plain": [
+       "DeviceArray([-16.23879236, -16.2310565 , -16.22331509, ..., -13.40276013,\n",
+       "             -13.41207219, -13.42138503], dtype=float64)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "carbon_box_model = load_presaved_model(\"Guttler14\", production_rate_units=\"atoms/cm^2/s\")\n",
     "fitting_object = SingleFitter(carbon_box_model)\n",
     "fitting_object.prepare_function(model=\"simple_sinusoid\")\n",
-    "fitting_object.load_data())\n",
+    "fitting_object.load_data(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\")\n",
     "fitting_object.dc14_fine((774.86, 0.25, 0.8, 6.44))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
