Old anf forgotten changes

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from pandas import read_csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "109 µs ± 5.07 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "with open(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\") as data:\n",
     "    _ = next(data)  # Removing the header\n",
     "    data = array([row.strip().split(\",\") for row in data], dtype=float32)\n",
     "    data = transpose(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If there are multiple datasets within a single year just average. Bring the different datasets onto the same baseline. "
    ]
   },
   {
