--- a/Python ODE/linear_solver.ipynb
+++ b/Python ODE/linear_solver.ipynb
@@ -26,7 +26,7 @@
     "from matplotlib.pyplot import plot\n",
     "\n",
     "from functools import partial\n",
-    "from itertools import compress, groupby, tee, takewhile"
+    "from itertools import compress, groupby"
    ]
   },
   {
