--- a/Python ODE/python_ode.ipynb
+++ b/Python ODE/python_ode.ipynb
@@ -17,9 +17,7 @@
     "from time import process_time   # For timing the different ode implementations\n",
     "from os import getcwd\n",
     "from functools import partial\n",
-    "from plotnine import *\n",
-    "import matplotlib.pyplot as plt # Plotting library for visualisations\n",
-    "plt.style.use(\"dark_background\")# Because dark mpde"
+    "from plotnine import *"
    ]
   },
   {
